# israeli-price-comparison

./: .env.example  .gitignore  README.md  main.py
config/: settings.yaml
price-comparison-app/: README.md  pyproject.toml  requirements.txt
price-comparison-app/src/agents/: data_validation.py  price_extraction.py  product_understanding.py
price-comparison-app/src/graph/: workflow.py
price-comparison-app/src/mcp_client/: __init__.py  client.py
price-comparison-app/src/models/: __init__.py
price-comparison-app/src/utils/: __init__.py  config.py  logger.py
price-comparison-app/tests/: __init__.py  conftest.py  test_agents.py
src/: __init__.py
src/agents/: __init__.py  price_comparison.py  reporting.py  web_search.py
src/graph/: __init__.py  state.py  workflow.py
src/mcp_client/: client.py
src/models/: schemas.py
src/utils/: config.py
tests/: conftest.py  test_integration.py  test_workflow.py
